--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ install:
  - "pip install .[test]"
  - node -v
  - npm install
+ # download model
+ - mkdir -p ~/.torch/models
+ - cd ~/.torch/models; wget https://documents.epfl.ch/users/k/kr/kreiss/www/resnet50block5-pif-paf-edge401-190315-214317-8c9fbafe.pkl
 script:
- - pylint openpifpafwebdemo --disable=fixme
+#  - pylint openpifpafwebdemo --disable=fixme
  - npm run lint
  - npm run test
