--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
 install:
  - pip install --upgrade pip setuptools
  - pip install --upgrade numpy cython
- - "pip install .[test]"
+ - "pip install --upgrade .[test]"
  - node -v
  - npm install
  # prefetch model
