--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ __pycache__/
 dist/
 
 # generated content
-static/analysis.js*
-static/index.html
+openpifpafwebdemo/static/analysis.js*
+openpifpafwebdemo/static/index.html
 openpifpafwebdemo/analysis.js*
 
 # JavaScript
