--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
  - "pip install --upgrade .[test]"
  - node -v
  - npm install
- - webpack
+ - npm run build
  # prefetch model
  - mkdir -p ~/.torch/models
  - cd ~/.torch/models; wget -nc https://documents.epfl.ch/users/k/kr/kreiss/www/resnet50block5-pif-paf-edge401-190315-214317-8c9fbafe.pkl; cd -
