--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,1 @@
-include openpifpafwebdemo/analysis.js
-include openpifpafwebdemo/index.html
-recursive-include openpifpafwebdemo/static *.js *.js.map *.html
-recursive-include openpifpafwebdemo/static/_static *.css *.ico *.svg
+recursive-include openpifpafwebdemo/static *.js *.js.map *.html *.ico *.svg *.css
