--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,3 @@
+include openpifpafwebdemo/base.html
+include openpifpafwebdemo/index.html
 recursive-include openpifpafwebdemo/static *.js *.js.map *.html *.ico *.svg *.css
