init ONNX experiment

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "chai": "^4.2.0",
     "child_process": "^1.0.2",
     "mocha": "^6.0.2",
+    "ndarray": "^1.0.18",
+    "ndarray-ops": "^1.2.2",
+    "onnxjs": "^0.1.6",
     "request": "^2.88.0",
     "source-map-loader": "^0.2.4",
     "tslint": "^5.14.0",
