--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
  - npm run build
  # prefetch model
  - mkdir -p ~/.torch/models
- - cd ~/.torch/models; wget -nc https://documents.epfl.ch/users/k/kr/kreiss/www/resnet50block5-pif-paf-edge401-190315-214317-8c9fbafe.pkl; cd -
+ - cd ~/.torch/models; wget -nc https://storage.googleapis.com/openpifpaf-pretrained/v0.5.0/resnet50block5-pif-paf-edge401-190424-122009-f26a1f53.pkl; cd -
 script:
  - pylint openpifpafwebdemo --disable=fixme
  - npm run lint
