--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-dist: xenial
+dist: bionic
 language: python
 cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.cache/torch/checkpoints
+before_cache:
+  - rm -f $HOME/.cache/pip/log/debug.log
 python:
- - "3.5"
  - "3.6"
  - "3.7"
+ - "3.8"
 install:
  - pip install --upgrade pip setuptools
  - "pip install --upgrade .[test]"
