--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,6 +66,7 @@ jobs:
         python -m pip freeze
         python --version
         python -c "import openpifpaf; print(openpifpaf.__version__)"
+        python -c "import openpifpafwebdemo; print(openpifpafwebdemo.__version__)"
     - name: Prefetch model
       run: |
         mkdir -p ~/.cache/torch/checkpoints
@@ -76,6 +77,6 @@ jobs:
         pylint openpifpafwebdemo --disable=fixme
     - name: pycodestyle openpifpafwebdemo
       run: |
-        python -m pycodestyle openpifpaf
+        python -m pycodestyle openpifpafwebdemo
     - run: npm run lint
     - run: npm run test
