--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,27 @@ name: Tests
 on: [push, pull_request]
 
 jobs:
-  build:
+  prefetch:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install Python
+      run: |
+        python -m pip install --upgrade pip setuptools
+        python -m pip install torch==1.7.1+cpu torchvision==0.8.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
+        python -m pip install -e .
+    - name: Dummy predict to download checkpoint
+      run: |
+        python -m openpifpaf.predict docs/example.png
+    - uses: actions/upload-artifact@v2
+      with:
+        path: .cache/torch/
 
+  build:
+    needs: [prefetch]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -37,6 +56,10 @@ jobs:
             torch-source: https://download.pytorch.org/whl/torch_stable.html
 
     steps:
+    - uses: actions/download-artifact@v2
+      with:
+        name: artifact
+        path: .cache/torch/
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
