--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,31 @@ name: Tests
 on: [push, pull_request]
 
 jobs:
-  build:
+  prefetch:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install Python
+      run: |
+        python -m pip install --upgrade pip setuptools
+        python -m pip install torch==1.7.1+cpu torchvision==0.8.2+cpu -f https://download.pytorch.org/whl/torch_stable.html
+        python -m pip install -e .
+    - name: Dummy predict to download checkpoint
+      run: |
+        python -m openpifpaf.predict docs/example.png
+    - uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: ~/.cache/torch/
 
+  build:
+    needs: [prefetch]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -37,6 +60,10 @@ jobs:
             torch-source: https://download.pytorch.org/whl/torch_stable.html
 
     steps:
+    - uses: actions/download-artifact@v2
+      with:
+        name: artifact
+        path: ~/.cache/torch/
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
@@ -50,7 +77,7 @@ jobs:
     - name: Set up node
       uses: actions/setup-node@v2
       with:
-        node-version: '12'
+        node-version: '14'
     - name: Install Python
       run: |
         python -m pip install --upgrade pip setuptools
@@ -67,12 +94,6 @@ jobs:
         python --version
         python -c "import openpifpaf; print(openpifpaf.__version__)"
         python -c "import openpifpafwebdemo; print(openpifpafwebdemo.__version__)"
-    - name: Prefetch model
-      if: matrix.os != 'windows-latest'
-      run: |
-        mkdir -p ~/.cache/torch/checkpoints
-        cd ~/.cache/torch/checkpoints
-        wget -q -nc https://storage.googleapis.com/openpifpaf-pretrained/v0.8.0/shufflenetv2x1-pif-paf-edge401-190705-151607-d9a35d7e.pkl
     - name: Lint Python
       run: |
         pylint openpifpafwebdemo --disable=fixme
