--- a/.pylintrc
+++ b/.pylintrc
@@ -14,4 +14,4 @@ generated-members=numpy.*,torch.*,openpifpaf.functional.*
 ignored-modules=openpifpaf.functional
 
 
-disable=E1102,missing-docstring,useless-object-inheritance,duplicate-code,too-many-arguments,too-many-instance-attributes,too-many-locals,too-few-public-methods
+disable=E1102,missing-docstring,useless-object-inheritance,duplicate-code,too-many-arguments,too-many-instance-attributes,too-many-locals,too-few-public-methods,abstract-method,attribute-defined-outside-init
