--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@babel/core": "^7.10.3",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.7",
-    "@types/request": "^2.48.5",
+    "@types/node-fetch": "^2.5.8",
     "awesome-typescript-loader": "^5.2.1",
     "babel": "^6.23.0",
     "babel-loader": "^8.1.0",
@@ -32,8 +32,8 @@
     "mocha": "^6.2.3",
     "ndarray": "^1.0.19",
     "ndarray-ops": "^1.2.2",
+    "node-fetch": "^2.6.1",
     "onnxjs": "^0.1.7",
-    "request": "^2.88.2",
     "source-map-loader": "^0.2.4",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5",
