--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,11 @@ license_file = LICENSE
 max-line-length=119
 ignore=E731,E741,W503
 exclude=openpifpafwebdemo/__init__.py
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = openpifpafwebdemo/_version.py
+versionfile_build = openpifpafwebdemo/_version.py
+tag_prefix = v
+#parentdir_prefix =
