use 'npm ci' instead of 'npm install'

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Install for MacOSX
       if: matrix.os == 'macos-latest'
       run: brew install libomp  # required for onnxruntime
-    - run: npm install
+    - run: npm ci  # install from package-lock.json without modifying it
     - run: npm run build
     - name: Print environment
       run: |
