--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,15 +63,19 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v1
         with:
           images: svenkreiss/openpifpafwebdemo
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./docker/Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
 
   upload_pypi:
     needs: [build_sdist]
