--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "test": "tsc && mocha -t 30000 js/build/commonjs/test.js",
-    "lint": "tslint -c tslint.json js/src/*.ts"
+    "lint": "eslint -c .eslintrc.js --ext .ts js/src/"
   },
   "repository": {
     "type": "git",
@@ -35,9 +35,13 @@
     "node-fetch": "^2.6.1",
     "onnxjs": "^0.1.7",
     "source-map-loader": "^0.2.4",
-    "tslint": "^6.1.2",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0"
   }
 }
