--- a/package.json
+++ b/package.json
@@ -22,22 +22,20 @@
   "dependencies": {
     "@babel/core": "^7.10.3",
     "@types/chai": "^4.2.11",
-    "@types/mocha": "^5.2.7",
+    "@types/mocha": "^8.2.3",
     "@types/node-fetch": "^2.5.8",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel": "^6.23.0",
-    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "child_process": "^1.0.2",
-    "mocha": "^6.2.3",
+    "mocha": "^9.0.2",
     "ndarray": "^1.0.19",
     "ndarray-ops": "^1.2.2",
     "node-fetch": "^2.6.1",
     "onnxjs": "^0.1.7",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "webpack": "^5.43.0",
+    "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.2",
