--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,19 @@ jobs:
       - name: Build sdist
         run: python setup.py sdist
 
+      - name: Install Python part to build static gh-pages page
+        run: |
+          python -m pip install --upgrade pip setuptools
+          python -m pip install -e "."
+      - run: npm ci  # install from package-lock.json without modifying it
+      - run: npm run build
+      - name: Print environment
+        run: |
+          python -m pip freeze
+          python --version
+          python -c "import openpifpaf; print(openpifpaf.__version__)"
+          python -c "import openpifpafwebdemo; print(openpifpafwebdemo.__version__)"
+
       - name: Build gh-pages
         run: python -m openpifpafwebdemo.server --write-static-page=gh-pages --google-analytics=UA-137290484-1 --resolution=0.2
 
