--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,25 @@ jobs:
       - name: Build sdist
         run: python setup.py sdist
 
+      - name: Install Python part to build static gh-pages page
+        run: |
+          python -m pip install --upgrade pip setuptools
+          python -m pip install -e "."
+      - name: Print environment
+        run: |
+          python -m pip freeze
+          python --version
+          python -c "import openpifpaf; print(openpifpaf.__version__)"
+          python -c "import openpifpafwebdemo; print(openpifpafwebdemo.__version__)"
+
+      - name: Build gh-pages
+        run: python -m openpifpafwebdemo.server --write-static-page=gh-pages --google-analytics=UA-137290484-1 --resolution=0.2
+
       - uses: actions/upload-artifact@v2
         with:
-          path: dist/*.tar.gz
+          path: |
+            dist/*.tar.gz
+            gh-pages
 
   create_docker:
     needs: [build_sdist]
@@ -95,3 +111,23 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
           # To test: repository_url: https://test.pypi.org/legacy/
+
+  upload_ghpages:
+    needs: [build_sdist]
+    runs-on: ubuntu-latest
+    # upload to PyPI on every tag starting with 'v'
+    # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+    # alternatively, to publish when a GitHub Release is created, use the following rule:
+    if: github.event_name == 'release' && github.event.action == 'published'
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: gh-pages
+
+      - name: GitHub Pages action
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./gh-pages
+          force_orphan: true
