--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,12 +9,6 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            python: 3.6
-            torch: 1.7.1+cpu
-            torchvision: 0.8.2+cpu
-            torch-source: https://download.pytorch.org/whl/cpu/torch_stable.html
-            train: True
-          - os: ubuntu-latest
             python: 3.7
             torch: 1.7.1+cpu
             torchvision: 0.8.2+cpu
@@ -23,6 +17,16 @@ jobs:
             python: 3.8
             torch: 1.7.1+cpu
             torchvision: 0.8.2+cpu
+            torch-source: https://download.pytorch.org/whl/cpu/torch_stable.html
+          - os: ubuntu-latest
+            python: 3.9
+            torch: 1.13.1+cpu
+            torchvision: 1.14.1+cpu
+            torch-source: https://download.pytorch.org/whl/cpu/torch_stable.html
+          - os: ubuntu-latest
+            python: "3.10"
+            torch: 1.13.1+cpu
+            torchvision: 1.14.1+cpu
             torch-source: https://download.pytorch.org/whl/cpu/torch_stable.html
           - os: macos-latest
             python: 3.7
@@ -36,26 +40,16 @@ jobs:
             torch-source: https://download.pytorch.org/whl/torch_stable.html
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - name: Cache checkpoints
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cache/torch/
-        key: ${{ runner.os }}-${{ hashFiles('setup.py') }}
     - name: Set up Python ${{ matrix.python }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python }}
     - name: Python version
       run: |
         python --version
-    - name: Set up node
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
     - name: Install Python
       run: |
         python -m pip install --upgrade pip setuptools
