--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,21 +20,17 @@ jobs:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Set up node
-        uses: actions/setup-node@v2
+      - name: Install Python
+        uses: actions/setup-python@v4
         with:
-          node-version: '14'
+          python-version: '3.9'
+
       - run: npm ci  # install from package-lock.json (without modifying it)
       - run: npm run build
-
-      - name: Install Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.7'
 
       - run: git status
 
@@ -55,7 +51,7 @@ jobs:
       - name: Build gh-pages
         run: python -m openpifpafwebdemo.server --write-static-page=gh-pages --google-analytics=UA-137290484-1 --resolution=0.2
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: |
             dist/*.tar.gz
@@ -68,8 +64,8 @@ jobs:
     if: github.event_name == 'release'
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2
-      - uses: actions/download-artifact@v2
+        uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
         with:
           name: artifact
           path: .
@@ -85,7 +81,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: ./docker/Dockerfile
@@ -101,12 +97,12 @@ jobs:
     # alternatively, to publish when a GitHub Release is created, use the following rule:
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: artifact
           path: .
 
-      - uses: pypa/gh-action-pypi-publish@master
+      - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
@@ -120,7 +116,7 @@ jobs:
     # alternatively, to publish when a GitHub Release is created, use the following rule:
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: artifact
           path: .
