--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "moduleResolution": "node",
         "target": "es6",
         // "noImplicitAny": true,
         "suppressImplicitAnyIndexErrors": true,
