--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,24 +10,24 @@ jobs:
         include:
           - os: ubuntu-latest
             python: 3.7
-            torch: 1.7.1+cpu
-            torchvision: 0.8.2+cpu
+            torch: 1.13.1+cpu
+            torchvision: 0.14.1+cpu
             torch-source: https://download.pytorch.org/whl/torch_stable.html
           - os: ubuntu-latest
             python: 3.8
-            torch: 1.7.1+cpu
-            torchvision: 0.8.2+cpu
-            torch-source: https://download.pytorch.org/whl/cpu/torch_stable.html
+            torch: 1.13.1+cpu
+            torchvision: 0.14.1+cpu
+            torch-source: https://download.pytorch.org/whl/torch_stable.html
           - os: ubuntu-latest
             python: 3.9
             torch: 1.13.1+cpu
             torchvision: 0.14.1+cpu
-            torch-source: https://download.pytorch.org/whl/cpu/torch_stable.html
+            torch-source: https://download.pytorch.org/whl/torch_stable.html
           - os: ubuntu-latest
             python: "3.10"
             torch: 1.13.1+cpu
             torchvision: 0.14.1+cpu
-            torch-source: https://download.pytorch.org/whl/cpu/torch_stable.html
+            torch-source: https://download.pytorch.org/whl/torch_stable.html
           - os: macos-latest
             python: 3.8
             torch: 1.13.1
